[package]
name = "glados-highlight"
version.workspace = true
edition.workspace = true
publish.workspace = true
authors.workspace = true
description.workspace = true

[dependencies]
# Core libraries
tree-sitter = "0.25.8"
tree-sitter-highlight = "0.25.8"
tree-sitter-language = "0.1.5"

# Languages
tree-sitter-asm = "0.24.0"
tree-sitter-bash = "0.25.0"
tree-sitter-c = "0.24.1"
tree-sitter-c-sharp = "0.23.1"
tree-sitter-cmake = "0.7.1"
tree-sitter-cpp = "0.23.4"
tree-sitter-css = "0.25.0"
tree-sitter-cuda = "0.21.0"
tree-sitter-dart = "0.0.4"
# tree-sitter-ebnf = "0.1.0"
tree-sitter-elixir = "0.3.4"
tree-sitter-elm = "5.8.0"
tree-sitter-erlang = "0.15.0"
tree-sitter-fsharp = "0.1.0"
tree-sitter-gdscript = "5.0.1"
tree-sitter-gleam = "1.0.0"
tree-sitter-glsl = "0.2.0"
tree-sitter-go = "0.25.0"
tree-sitter-haskell = "0.23.1"
tree-sitter-hlsl = "0.2.0"
tree-sitter-html = "0.23.2"
tree-sitter-java = "0.23.5"
tree-sitter-javascript = "0.25.0"
tree-sitter-jsdoc = "0.25.0"
tree-sitter-json = "0.24.8"
tree-sitter-julia = "0.23.1"
# tree-sitter-less = "1.0.0"
# tree-sitter-llvm = "1.1.0"
tree-sitter-lua = "0.2.0"
tree-sitter-make = "1.1.1"
tree-sitter-md = "0.5.1"
tree-sitter-objc = "3.0.2"
tree-sitter-ocaml = "0.24.2"
tree-sitter-odin = "1.3.0"
tree-sitter-php = "0.24.2"
tree-sitter-powershell = "0.25.8"
tree-sitter-printf = "0.5.1"
tree-sitter-property-list = "0.1.0"
tree-sitter-python = "0.25.0"
tree-sitter-regex = "0.25.0"
tree-sitter-ron = "0.2.0"
tree-sitter-ruby = "0.23.1"
tree-sitter-rust = "0.24.0"
tree-sitter-scss = "1.0.0"
tree-sitter-slang = "0.3.1"
tree-sitter-slint = "0.24.0"
tree-sitter-squirrel = "1.0.0"
tree-sitter-svelte = "0.10.2"
tree-sitter-swift = "0.7.1"
tree-sitter-tablegen = "0.0.1"
tree-sitter-toml = "0.20.0"
tree-sitter-typescript = "0.23.2"
tree-sitter-typst = { git = "https://github.com/uben0/tree-sitter-typst", tag = "v0.11.0" }
tree-sitter-ungrammar = "0.0.1"
tree-sitter-wgsl = "0.0.6"
tree-sitter-xml = "0.7.0"
tree-sitter-yaml = "0.7.1"
tree-sitter-zig = "1.1.2"

# tree-sitter-scala = "0.24.0"
# tree-sitter-luadoc = "1.1.0"
# tree-sitter-python-docstring = "0.0.1"
# tree-sitter-mips = "0.1.4"
# tree-sitter-nix = "0.3.0"
# tree-sitter-plain = "0.1.0"
# tree-sitter-pony = "1.0.0"
# tree-sitter-diff = "0.1.0"
# tree-sitter-jinja = "0.10.0"
# tree-sitter-jinja-inline = "0.10.0"
# tree-sitter-embedded-template = "0.23.2"
# tree-sitter-go-sum = "1.0.0"
# tree-sitter-gomod = "1.0.1"
# tree-sitter-javadoc = "0.2.3"
